--- a/src/Sejil.Client/app.css
+++ b/src/Sejil.Client/app.css
@@ -1,3 +1,7 @@
+/* Copyright (C) 2017 Alaa Masoud
+ * See the LICENSE file in the project root for more information.
+ */
+
 html {
     box-sizing: border-box;
     font-family: sans-serif;
