--- a/src/Sejil.Client/app.css
+++ b/src/Sejil.Client/app.css
@@ -136,7 +136,7 @@ section {
     padding-right: 10px;
     padding-top: 5px;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
 }
 
@@ -280,6 +280,7 @@ section {
 .side-bar .section {
     border-bottom: 1px solid #a8a8a8;
     padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .side-bar .section .section-item {
