--- a/src/Sejil.Client/app.css
+++ b/src/Sejil.Client/app.css
@@ -84,11 +84,20 @@ section {
     height: 115px;
 }
 
-.filter-bar .filter-text {
+.filter-bar .filter-text.ant-input {
     min-height: 40px;
     padding-left: 10px;
     font-family: consolas, monaco, monospace;
     font-size: 14px;
+    width: calc(100% - 115px);
+}
+
+.filter-bar .filter-save {
+    height: 37px;
+    font-size: 14px;
+    font-family: Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;
+    margin-left: 15px;
+    width: 100px;
 }
 
 .filter-bar .period-filter .filter-group {
